--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>json</artifactId>
             <version>20090211</version>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.11</artifactId>
+            <version>2.4.14</version>
+        </dependency>
     </dependencies>
 
     <properties>
