--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 
     <groupId>mapinci</groupId>
     <artifactId>server</artifactId>
+    <packaging>war</packaging>
     <version>0.1.0</version>
 
     <parent>
